--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -42,9 +42,10 @@
 
         </br>
         <div class="field">
-        <%= f.label :image_name %><br />
+        <%= f.label :image_name %>
         <%= f.file_field :image_name %>
       </div>
+       <br/>
 
       <div class="field">
         <%= f.label :description %><br />
@@ -53,9 +54,10 @@
 
         </br>
         <div class="field">
-          <%= f.label :image_name_desc %><br />
+          <%= f.label :image_name_desc %>
           <%= f.file_field :image_name_desc %>
         </div>
+        <br/>
 
         </br>
         <div class="field">
