--- a/app/views/bundles/edit.html.erb
+++ b/app/views/bundles/edit.html.erb
@@ -69,12 +69,20 @@
           <%= f.label :like %><br />
           <%= f.number_field :like %>
         </div>
+        <br/>
+        <br/>
+        <br/>
+
         <div class="field">
-          <%= f.label :image_name %><br />
+          <%= f.label :image_name %>
           <%= f.file_field  :image_name %>
         </div>
+        <br/>
+        <br/>
+        <br/>
+
         <div class="field">
-          <%= f.label :image_name_set %><br />
+          <%= f.label :image_name_set %>
           <%= f.file_field  :image_name_set %>
         </div>
 
