--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -38,14 +38,21 @@
           <%= f.number_field :priority_order %>
         </div>
 
+        <br/>
+        <br/>
+        <br/>
 
         <div class="field">
-          <%= f.label :image_name %><br />
+          <%= f.label :image_name %>
           <%= f.file_field :image_name %>
         </div>
+        <br/>
+        <br/>
+        <br/>
+
 
         <div class="field">
-          <%= f.label :image_name_gray %><br />
+          <%= f.label :image_name_gray %>
           <%= f.file_field :image_name_gray %>
         </div>
 
