--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -65,6 +65,9 @@
                   <li><%= link_to "Bookmarks Categories", bookmarks_categories_path  %></li>
                   <li><%= link_to "Feedback", feedbacks_path  %></li>
                   <li><%= link_to "Notification", notifications_path  %></li>
+                  <li><%= link_to "Companies Logo", companies_path  %></li>
+                  <li><%= link_to "Static Content", static_contents_path  %></li>
+
 
                 </ul>
               </li>
