--- a/app/views/bundles/_form.html.erb
+++ b/app/views/bundles/_form.html.erb
@@ -69,16 +69,25 @@
           <%= f.number_field :like %>
         </div>
 
+        <br/>
+        <br/>
+        <br/>
 
         <div class="field">
-        <%= f.label :image_name %><br />
+        <%= f.label :image_name %>
         <%= f.file_field  :image_name %>
-      </div>
+        </div>
+
+
+        <br/>
+        <br/>
+        <br/>
 
         <div class="field">
-          <%= f.label :image_name_set %><br />
+          <%= f.label :image_name_set %>
           <%= f.file_field  :image_name_set %>
         </div>
+        <br/>
 
 
 
