--- a/app/views/items_designs/index.html.erb
+++ b/app/views/items_designs/index.html.erb
@@ -12,7 +12,11 @@
     <th>Name</th>
     <th>Description</th>
     <th>Item_Design Image</th>
-    <th>Item_Design Image logo</th>
+
+    <th>Company Name ID</th>
+
+    <th>Company Name</th>
+    <th>Company Image Logo</th>
 
     <th>Item id</th>
     <th>Item Name</th>
@@ -49,19 +53,27 @@
 
 
     </td>
-    <td>
-      <% if items_design.image_name_logo.blank?  %>
-          <%= cl_image_tag "default_image_all.png",width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
-      <% else %>
-          <%= cl_image_tag items_design.image_name_logo,width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
-      <% end %>
+
+    <%  if items_design.company.nil? %>
+        <td></td>
+        <td></td>
+        <td></td>
+
+  <%  else %>
+        <td><%= items_design.company_id %></td>
+        <td><%= items_design.company.name %></td>
+        <td>
+          <% if items_design.company.image_name.blank?  %>
+              <%= cl_image_tag "default_image_all.png",width:50 , height:50,:crop => :fit,:default_image => "default_image_all.png" %>
+          <% else %>
+              <%= cl_image_tag items_design.company.image_name,width:50 , height:50,:crop => :fit,:default_image => "default_image_all.png" %>
+          <% end %>
+
+        </td>
+  <%  end %>
 
 
-
-    </td>
-
-
-    <%  if items_design.item.nil? %>
+        <%  if items_design.item.nil? %>
         <td></td>
         <td></td>
         <td></td>
