--- a/app/views/notifications/_form.html.erb
+++ b/app/views/notifications/_form.html.erb
@@ -26,8 +26,12 @@
       <%= f.text_area :description %>
     </div>
 
+    <br/>
+    <br/>
+    <br/>
+
     <div class="field">
-      <%= f.label :image_name %><br />
+      <%= f.label :image_name %>
       <%= f.file_field :image_name %>
     </div>
 
