--- a/app/views/themes/_form.html.erb
+++ b/app/views/themes/_form.html.erb
@@ -66,16 +66,23 @@
           <%= f.number_field :like %>
         </div>
 
+        <br/>
+        <br/>
+        <br/>
 
 
-      <div class="field">
-        <%= f.label :image_name %><br />
+        <div class="field">
+        <%= f.label :image_name %>
         <%= f.file_field :image_name %>
         <%= f.hidden_field(:image_name_cache) %>
       </div>
 
-      <div class="field">
-          <%= f.label :image_name_selection %><br />
+        <br/>
+        <br/>
+        <br/>
+
+        <div class="field">
+          <%= f.label :image_name_selection %>
           <%= f.file_field :image_name_selection %>
           <%= f.hidden_field(:image_name_selection_cache) %>
       </div>
