first time click

--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -56,6 +56,17 @@
           <%= f.file_field :image_name_gray %>
         </div>
 
+        <br/>
+        <br/>
+        <br/>
+
+
+        <div class="field">
+          <%= f.label :image_name_first_time_click %>
+          <%= f.file_field :image_name_first_time_click %>
+        </div>
+
+
 
 
         <div class="actions">
