--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -31,6 +31,13 @@
   <%= @item.image_name_gray.to_s %>
 </p>
 
+<p>
+  <b>Image name:</b>
+  <%= image_tag @item.image_name_first_time_click.url.to_s %>
+  <%= @item.image_name_first_time_click.to_s %>
+</p>
+
+
 
 <%= link_to 'Edit', edit_item_path(@item) %> |
 <%= link_to 'Back', items_path %>
