--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -12,6 +12,7 @@
     <th>Clickable</th>
     <th>Image name</th>
     <th>Image name gray</th>
+    <th>Image name first time click</th>
 
     <th>Priority order</th>
 
@@ -42,6 +43,14 @@
           <%= cl_image_tag item.image_name_gray,width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
       <% end %>
 
+    </td>
+    <td>
+
+      <% if item.image_name_first_time_click.blank?  %>
+          <%= cl_image_tag "default_image_all.png",width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+      <% else %>
+          <%= cl_image_tag item.image_name_first_time_click ,width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+      <% end %>
 
 
     </td>
