--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -221,6 +221,7 @@ input[type=password] {
     border-bottom-left-radius: 0px;
 }
 
+/*Mywebroom Button Style*/
 .blue_button{
     background-color: #00ccff;
     color:white;
@@ -234,14 +235,6 @@ input[type=password] {
     text-align: center;
     padding: 6px 26px;
 }
-
-
-.blue_highlight{
-    -webkit-box-shadow: 0px 0px 15px 4px rgba(0,204,255,1);
-    -moz-box-shadow: 0px 0px 15px 4px rgba(0,204,255,1);
-    box-shadow: 0px 0px 15px 4px rgba(0,204,255,1);
-}
-
 
 a.blue_button_light:hover{
     color: #ffffff;
@@ -265,5 +258,22 @@ a.blue_button_light:hover{
 a.green_button_light:hover{
     color: #ffffff;
     text-decoration: none;
+}
+/*END Mywebroom Button Style*/
+
+/*Box shadow blue border highlight*/
+.blue_highlight{
+    -webkit-box-shadow: 0px 0px 15px 4px rgba(0,204,255,1);
+    -moz-box-shadow: 0px 0px 15px 4px rgba(0,204,255,1);
+    box-shadow: 0px 0px 15px 4px rgba(0,204,255,1);
+}
+/*Span to make Element clickable*/
+.link_spanner{
+  position:absolute; 
+  width:100%;
+  height:100%;
+  top:0;
+  left: 0;
+  z-index: 1;
 }
 
