static content and boundle entire room

--- a/app/views/bundles/_form.html.erb
+++ b/app/views/bundles/_form.html.erb
@@ -89,6 +89,15 @@
         </div>
         <br/>
 
+        <br/>
+        <br/>
+        <br/>
+
+        <div class="field">
+          <%= f.label :image_name_entire_room %>
+          <%= f.file_field  :image_name_entire_room %>
+        </div>
+
 
 
         <div class="field">
