--- a/app/views/bundles/show.html.erb
+++ b/app/views/bundles/show.html.erb
@@ -90,6 +90,12 @@
   <%= @bundle.image_name_set.to_s %>
 </p>
 
+<p>
+  <b>Image Name Entire Room:</b>
+  <%= image_tag @bundle.image_name_entire_room.url.to_s %>
+  <%= @bundle.image_name_entire_room.to_s %>
+</p>
+
 
 
 
