--- a/app/views/bundles/edit.html.erb
+++ b/app/views/bundles/edit.html.erb
@@ -87,6 +87,15 @@
         </div>
 
 
+        <br/>
+        <br/>
+        <br/>
+
+        <div class="field">
+          <%= f.label :image_name_entire_room %>
+          <%= f.file_field  :image_name_entire_room %>
+        </div>
+
 
         <div class="field">
           <%= f.label :theme_id %><br />
