--- a/app/views/bundles/index.html.erb
+++ b/app/views/bundles/index.html.erb
@@ -15,6 +15,8 @@
 
     <th>Bundle Image name</th>
     <th>Bundle Image name Set</th>
+    <th>Bundle Image name Entire Room</th>
+
 
     <th>Theme id</th>
     <th>Theme name</th>
@@ -67,8 +69,19 @@
           <%= cl_image_tag bundle.image_name_set,width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
       <% end %>
 
+    </td>
+
+    <td>
+
+      <% if bundle.image_name_entire_room.blank?  %>
+          <%= cl_image_tag "default_image_all.png",width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+      <% else %>
+          <%= cl_image_tag bundle.image_name_entire_room,width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+      <% end %>
+
 
     </td>
+
 
 
     <%  if bundle.theme.nil? %>
