--- a/app/views/companies/index.html.erb
+++ b/app/views/companies/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Listing companies</h1>
+<h1>Listing Companies</h1>
 
-<%= link_to 'New Company', new_company_path %>
+<%= link_to 'New Company', new_company_path,class: "btn btn-primary" %>
 <table class="table table-bordered">
   <tr>
     <th>Name</th>
