--- a/app/views/static_contents/index.html.erb
+++ b/app/views/static_contents/index.html.erb
@@ -1,27 +1,37 @@
-<h1>Listing static_contents</h1>
+<h1>Listing Static Contents</h1>
 
-<table>
+<%= link_to 'New Static content', new_static_content_path,class: "btn btn-primary" %>
+
+<table class="table table-bordered">
   <tr>
     <th>Name</th>
     <th>Image name</th>
     <th>Description</th>
     <th></th>
     <th></th>
-    <th></th>
+
   </tr>
 
 <% @static_contents.each do |static_content| %>
   <tr>
     <td><%= static_content.name %></td>
-    <td><%= static_content.image_name %></td>
+    <td>
+
+      <% if static_content.image_name.blank?  %>
+          <%= cl_image_tag "default_image_all.png",width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+      <% else %>
+          <%= cl_image_tag static_content.image_name,width:100 , height:100,:crop => :fit,:default_image => "default_image_all.png" %>
+      <% end %>
+    </td>
+
+
     <td><%= static_content.description %></td>
     <td><%= link_to 'Show', static_content %></td>
     <td><%= link_to 'Edit', edit_static_content_path(static_content) %></td>
-    <td><%= link_to 'Destroy', static_content, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Static content', new_static_content_path %>
+
