--- a/app/views/static_contents/show.html.erb
+++ b/app/views/static_contents/show.html.erb
@@ -7,7 +7,9 @@
 
 <p>
   <b>Image name:</b>
+  <%= image_tag @static_content.image_name.url.to_s %>
   <%= @static_content.image_name %>
+
 </p>
 
 <p>
