--- a/app/assets/stylesheets/room_profile_requests.css.scss
+++ b/app/assets/stylesheets/room_profile_requests.css.scss
@@ -13,7 +13,7 @@
   max-height:200px;
 }
 .profile_table_innerDiv.profile_suggested_friends{
-  height:340px;
+  height:300px;
 }
 #profile_suggested_friends_list{
   overflow:scroll;
@@ -44,12 +44,15 @@
   border-bottom:1px solid #f4f4f4;
   position:relative;
 }
+.profile_single_request .media, .profile_request_buttons .btn-group{
+  position: static;
+}
 
 .profile_friend.media:hover,.profile_single_request:hover,.profile_friends_suggestion_single:hover{
   background-color: #e2e2e2;
 }
 p.profile_request_name, p.profile_suggestion_name,
-p.profile_friend_name{
+p.profile_friend_name, p.profile_friend_name a{
   color:#0073a5;
   font-size: 16px;
 }
