--- a/app/views/items_designs/index.html.erb
+++ b/app/views/items_designs/index.html.erb
@@ -1,10 +1,17 @@
 <h1>Listing items_designs</h1>
 
+
+<% @items.each do |item| %>
+    <%= link_to item.name, items_designs_path(item_id:item.id), :method => :get %>
+<% end %>
+
+
 <h3>
   <%= link_to 'New Items design', new_items_design_path %>
 </h3>
 
 
+<%= will_paginate %>
 
 <table class="table table-bordered">
   <tr>
@@ -112,6 +119,7 @@
 <% end %>
 </table>
 
+<%= will_paginate %>
 
 <br />
 
