--- a/app/views/shop/show_bookmark.html.erb
+++ b/app/views/shop/show_bookmark.html.erb
@@ -1,20 +1,25 @@
 <div class="shop_container">
   <%= render 'shop_nav' %>
 
-  <div class="shop_upper_container" data-shop-type="<%= @entity_type %>">
-    <%= link_to "Let me see it in my room", shop_forward_to_u_room_path(came_from:@came_from,entity_type:@entity_type,entity_id:@bookmark.id),:class => "blue_button blue_button_light"%>
-    <a href="#" class="shop_fb_btn"><img src="http://res.cloudinary.com/hpdnx5ayv/image/upload/c_fit,h_21,w_36/v1371241692/facebook.png"></a>
-    <a href="#" class="shop_pinterest_btn"><img src="//assets.pinterest.com/images/pidgets/pin_it_button.png"></a>
-
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-  </div>
+  <!--<div class="shop_upper_container" data-shop-type="<%= @entity_type %>">-->
+    <!--<%= link_to "Let me see it in my room", shop_forward_to_u_room_path(came_from:@came_from,entity_type:@entity_type,entity_id:@bookmark.id),:class => "blue_button blue_button_light"%>-->
+    <!--<a href="#" class="shop_fb_btn"><img src="http://res.cloudinary.com/hpdnx5ayv/image/upload/c_fit,h_21,w_36/v1371241692/facebook.png"></a>-->
+    <!--<a href="#" class="shop_pinterest_btn"><img src="//assets.pinterest.com/images/pidgets/pin_it_button.png"></a>-->
+    <!---->
+  <!--</div>-->
   <div class="shop_container_box">
 
       <div class="shop_left">
-        <p>
+        <div class="shop_upper_container" data-shop-type="<%= @entity_type %>">
+          <%= link_to "Let me see it in my room", shop_forward_to_u_room_path(came_from:@came_from,entity_type:@entity_type,entity_id:@bookmark.id),:class => "blue_button blue_button_light"%>
+          <a href="#" class="shop_fb_btn"><img src="http://res.cloudinary.com/hpdnx5ayv/image/upload/c_fit,h_21,w_36/v1371241692/facebook.png"></a>
+          <a href="#" class="shop_pinterest_btn"><img src="//assets.pinterest.com/images/pidgets/pin_it_button.png"></a>
+
+
+        </div>
+
+
+        <p class="shop_main_image_name_bookmark">
           <% if @bookmark.image_name_desc.blank?  %>
               <%= cl_image_tag("default_image_all.png", width: 180,height:180,:crop => :fit,:default_image => "default_image_all.png")%>
           <% else %>
