--- a/app/views/shop/show_items_design.html.erb
+++ b/app/views/shop/show_items_design.html.erb
@@ -1,19 +1,18 @@
 <div class="shop_container">
   <%= render 'shop_nav' %>
 
-  <div class="shop_upper_container" data-shop-type="<%= @entity_type %>">
-    <%= link_to "Let me see it in my room", shop_forward_to_u_room_path(came_from:@came_from,entity_type:@entity_type,entity_id:@items_design.id),:class => "blue_button blue_button_light"%>
-    <a href="#" class="shop_fb_btn"><img src="http://res.cloudinary.com/hpdnx5ayv/image/upload/c_fit,h_21,w_36/v1371241692/facebook.png"></a>
-    <a href="#" class="shop_pinterest_btn"><img src="//assets.pinterest.com/images/pidgets/pin_it_button.png"></a>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-  </div>
-
   <div class="shop_container_box">
-      <div class="shop_left">
-        <p>
+
+    <div class="shop_left">
+
+      <div class="shop_upper_container" data-shop-type="<%= @entity_type %>">
+        <%= link_to "Let me see it in my room", shop_forward_to_u_room_path(came_from:@came_from,entity_type:@entity_type,entity_id:@items_design.id),:class => "blue_button blue_button_light"%>
+        <a href="#" class="shop_fb_btn"><img src="http://res.cloudinary.com/hpdnx5ayv/image/upload/c_fit,h_21,w_36/v1371241692/facebook.png"></a>
+        <a href="#" class="shop_pinterest_btn"><img src="//assets.pinterest.com/images/pidgets/pin_it_button.png"></a>
+      </div>
+
+
+      <p class="shop_main_image_name">
           <% if @items_design.image_name_selection.blank?  %>
               <%= cl_image_tag("default_image_all.png", width: 300,height:300,:crop => :fit,:default_image => "default_image_all.png")%>
           <% else %>
@@ -49,7 +48,7 @@
         <br/>
         <br/>
         <form>
-          <input type="button" id="shop_green_button" class="green_button green_button_light" value="Buy at <%=@items_design.product_url.to_s%>"  onclick="window.location.href='<%=@items_design.product_url%>'">
+          <input type="button" id="shop_green_button" class="green_button green_button_light" value="Buy at <%=@items_design_btn_url_name.to_s%>"  onclick="window.location.href='<%=@items_design.product_url%>'">
         </form>
       </div>
 
