--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,23 +1,34 @@
 <% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
 
-<div class="row">
-  <div class="span6 offset3">
+<div class="session_container">
+  <%= render 'shared/error_messages' %>
+
+  <div class="session_container_main">
+
+    <p id="session_login_text">Sign up </p>
+
+    <%= link_to cl_image_tag("facebook-btn.png" , width: 360,height:52,:crop => :fit,:default_image => "default_image_all.png") , "/auth/facebook", id: "session_facebook_btn" %>
+
+    <p id="session_or_text">OR</p>
+
     <%= form_for(@user) do |f| %>
-        <%= render 'shared/error_messages' %>
 
-        <%= f.label :email %>
-        <%= f.text_field :email %>
+        <div class="field">
+          <%= f.text_field :email , :placeholder => "Email" , :id => "session_email_box"%>
+        </div>
+        <div class="field">
+          <%= f.password_field :password , :placeholder => "Password", :id => "session_password_box"%>
+        </div>
 
-        <%= f.label :password %>
-        <%= f.password_field :password %>
+        <div class="actions">
+          <%= f.submit "SIGN UP", class: "blue_button" %>
+        </div>
 
-
-        <%= f.submit "Create my account", class: "btn btn-large btn-primary" %>
     <% end %>
-
-    <p><%= link_to "forgotten password?", new_password_reset_path %></p>
 
 
   </div>
 </div>
+
+
+
