Finalize style for First Time Item Click Popup. Fix font issue with Profile Sidebar.

--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -134,7 +134,8 @@ nav.profile {
   padding-top:60px;
 }
 #profile_sidebar ul{
-  font-size:15px;
+  font-family:"Open Sans Condensed";
+  font-size:20px;
   font-weight:lighter;
   margin:0;
   padding:0;
