--- a/app/assets/stylesheets/rooms_popup_friend_item.css.scss
+++ b/app/assets/stylesheets/rooms_popup_friend_item.css.scss
@@ -1,3 +1,4 @@
+/*Friends Items*/
 #popup_friend_item_wrap{
     width:400px;
     height:256px;
@@ -7,7 +8,7 @@
   top:2px;
   right:2px;
 }
-.popup_friend_green_button{
+.popup_friend_green_button, .popup_first_click_green_button{
   position: absolute;
   bottom: 45px;
   right: 49px;
@@ -16,4 +17,24 @@
   text-align:center;
   font-size: 14px;
   padding: 3px 0;
+}
+/*First Time Item Clicks*/
+.popup_item_first_click_view{
+  width:960px;
+  height:550px;
+  position:fixed;
+  top:50%;
+  left:50%;
+  margin-left:-480px;
+  margin-top: -275px;
+
+}
+.popup_first_click_green_button{
+  bottom:160px;
+  right:0;
+  left:200px;
+  width:200px;
+  font-family: "Open Sans";
+  font-weight: 400;
+  font-size:18px;
 }
