--- a/app/views/rooms/xroom.html.erb
+++ b/app/views/rooms/xroom.html.erb
@@ -1,9 +1,49 @@
-<div id="xroom_main_container">
-  <div id="xroom">
-    <div id="xroom_items">   </div>
-    <div id="xroom_profile"> </div>
-    <div id="xroom_social">  </div>
-  </div>
+<header class="navbar navbar-fixed-top navbar-inverse" >
+  <div class="navbar-inner" >
+
+
+    <% if @static_content_logo.image_name.blank?  %>
+    <% else %>
+        <%= link_to cl_image_tag(@static_content_logo.image_name, :width => 112, :height => 32 ), root_path , class:"brand",id:  "xroom_logo"  %>
+    <% end %>
+
 
 </div>
+</header>
+
+
+
+<div id="xroom_entire_room_container">
+
+        <div id="xroom_entire_room_background">
+            <% if @bundle.theme.image_name.blank?  %>
+            <% else %>
+                <%= cl_image_tag @bundle.theme.image_name,:default_image => "default_image_all.png" %>
+            <% end %>
+        </div>
+
+        <div id="xroom_entire_room_left" style="background-image: url('<%= @static_content_arrows.image_name%>')" >
+          <%= link_to "", xroom_rooms_path(bundle_id:@bundle.id,moving_toward:'prev'), :method => :get, class:'xroom_entire_room_right_fill-div' %>
+        </div>
+
+        <div id="xroom_entire_room_right" style="background-image: url('<%= @static_content_arrows.image_name%>')" >
+          <%= link_to "", xroom_rooms_path(bundle_id:@bundle.id,moving_toward:'next'), :method => :get, class:'xroom_entire_room_right_fill-div' %>
+        </div>
+
+</div>
+
+<script>
+
+        $(function() {
+            console.log( "center room on the tutorial" );
+            var document_width = $(document).width();
+            var window_width = $(window).width();
+            var percent = 0.44;
+            var width_percent = document_width - window_width;
+            width_percent = width_percent * percent;
+            window.scrollTo(width_percent,0);
+        });
+
+
+</script>
 
