toogle first time click

--- a/app/assets/stylesheets/xroom.css.scss
+++ b/app/assets/stylesheets/xroom.css.scss
@@ -54,3 +54,14 @@ a.xroom_entire_room_right_fill-div {
   width: 100%;
   text-decoration: none;
 }
+
+
+#xroom_entire_room_btn{
+  position:fixed;
+  z-index:4;
+  top:10%;
+  left:38%;
+  width:180px;
+
+
+}
