--- a/app/assets/stylesheets/xroom.css.scss
+++ b/app/assets/stylesheets/xroom.css.scss
@@ -48,20 +48,13 @@
   background-color: rgba(0,0,0,.8);
 }
 
-a.xroom_entire_room_right_fill-div {
-  display: block;
-  height: 100%;
-  width: 100%;
-  text-decoration: none;
-}
-
-
 #xroom_entire_room_btn{
   position:fixed;
   z-index:4;
   top:10%;
   left:38%;
-  width:180px;
+}
 
-
+#xroom_entire_room_btn_blue {
+  padding: 6px 36px;
 }
