Spacing in profile basic info. Add gender light font and light_font class

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -145,6 +145,9 @@ footer ul li {
 .capitalize{
     text-transform: capitalize;
 }
+.light_font{
+   font-weight:300;
+}
 .hidden{
     visibility:hidden;
 }
