--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -69,7 +69,7 @@ nav.profile {
 }
 #profile_home_wrapper ul{
   margin:0;
-  padding:0;
+  padding:5px 0;
 }
 #profile_sidebar a,#profile_sidebar a:visited{
   text-decoration:none;
@@ -258,7 +258,7 @@ div.spacer{
   border-bottom: 1px solid #2c2c2c;
   font-size:15px;
   font-weight:lighter;
-  padding:15px 10px;
+  padding:10px 10px 15px 10px;
   
 }
 
@@ -281,7 +281,7 @@ div.spacer{
   text-transform:uppercase;
 }
 div.profile_info_name{
-  padding:15px 10px;
+  padding:10px;
 }
 #profile_info_name{
   font-size:22px;
