Turn upload photos button into CSS

--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -199,6 +199,10 @@ div.spacer{
   text-align: center;
   border-radius: 3px;
 }
+.user-photos-view #upload_new_photo_button{
+  width:107px;
+
+}
 //Sidebar Icons
 
 #profile_home a{
