--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -337,11 +337,11 @@ div.profile_info_name{
   background-color: #5d6567;
   color:white;
   text-align:left;
-  font-size:16px;
+  font-size:14px;
   font-weight:normal;
   text-transform:uppercase;
   width:100%;
-  padding-left:4px;
+  padding-left:10px;
 }
 // #profile_home_wrapper 
 table.generalGrid{
@@ -359,7 +359,7 @@ table.generalGrid{
   text-align:center;
 
 }
-.user-photos-view #gridItemList{
+.user-photos-view #gridItemList,.profile_objects_view #gridItemList,.profile_bookmarks_view #gridItemList{
   text-align:left;
 }
 #profileHome_activity_header, .profileTableHeader{
