--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -62,6 +62,8 @@ nav.profile {
   background-repeat: no-repeat;
   background-position: 50% 50%;
   position:relative;
+  width:100%;
+  height:100%;
 }
 .profile_home_img_wrap{
   .profile_picture{
@@ -95,6 +97,11 @@ nav.profile {
   #profile_image_edit{
     display:block;
   }
+}
+#profile_small_user_picture_wrap{
+  width:70px;
+  height:70px;
+  padding:1em;
 }
 #profile_home_wrapper figcaption{
   font-size:8px;
