--- a/app/assets/stylesheets/room_profile_requests.css.scss
+++ b/app/assets/stylesheets/room_profile_requests.css.scss
@@ -99,7 +99,9 @@ p.profile_friend_username{
 .user-photos-view{
   background-color: transparent;
 }
-
+.user-photos-view #profile_small_user_picture_wrap{
+  padding:1em 1em 1em 0;
+}
 /*Ask For Key Overlay*/
 #profile_ask_for_key_overlay{
   height:200px;
