tutorial signup page

--- a/app/views/rooms/xroom.html.erb
+++ b/app/views/rooms/xroom.html.erb
@@ -33,7 +33,7 @@
 
 
           <div id="xroom_entire_room_btn"  >
-            <%= link_to "Use this Room ",xroom_rooms_path,:class => "blue_button blue_button_light", :id => "xroom_entire_room_btn_blue"%>
+            <%= link_to "Use this Room ",signup_path(bundle_id:@bundle.id),:class => "blue_button blue_button_light", :id => "xroom_entire_room_btn_blue"%>
           </div>
 
 
