--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -11,7 +11,7 @@
 
     <p id="session_or_text">OR</p>
 
-    <%= form_for(@user) do |f| %>
+     <%= form_for @user, :url => users_path(bundle_id:@bundle_id),:html => {:method => :post}   do |f| %>
 
         <div class="field">
           <%= f.text_field :email , :placeholder => "Email" , :id => "session_email_box"%>
@@ -23,6 +23,8 @@
         <div class="actions">
           <%= f.submit "SIGN UP", class: "blue_button" %>
         </div>
+
+
 
     <% end %>
 
