--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -435,6 +435,7 @@ table.generalGrid{
 #profile_close_button{
   background-image:url('http://res.cloudinary.com/hpdnx5ayv/image/upload/v1375811602/close-btn_gkzdgt.png');
   background-position: 0 0;
+  background-repeat: no-repeat;
   display:block;
   height:14px;
   width:14px;
@@ -467,7 +468,7 @@ div.profile_friend_image_holder, .profile_request_single_image_holder,
   border:0;
 }
 .profile_friend_button{
-  padding-right:20px;
+  // padding-right:20px;
 }
 
 /*PROFILE Media Queries*/
