--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -452,7 +452,7 @@ div.profile_friend_image_holder, .profile_request_single_image_holder,
 .profile_friend_suggestion_single_image_holder, {
    width:70px;
    height:70px;
-   background-size:contain;
+   background-size:cover;
    background-repeat: no-repeat;
    background-position: 50% 50%;
    border:1px solid #e2e2e2;
@@ -466,6 +466,7 @@ div.profile_friend_image_holder, .profile_request_single_image_holder,
 .profile_friend_gear{
   padding:0;
   border:0;
+  height:32px;
 }
 .profile_friend_button{
   // padding-right:20px;
