--- a/app/assets/stylesheets/room_profile_requests.css.scss
+++ b/app/assets/stylesheets/room_profile_requests.css.scss
@@ -44,15 +44,20 @@
 
 /*End Profile Key Request Structure*/
 /*Profile Single Request and Single Suggestion CSS*/
-.profile_single_request .media, .profile_friend.media{
+.profile_friend.media{
   // background-color:#f5f5f5;
   border-bottom:1px solid #f4f4f4;
   position:relative;
-  padding: 1em;
+  padding: 6px 1em;
   margin:0;
 }
 .profile_single_request .media, .profile_request_buttons .btn-group{
   position: static;
+  padding: 6px 1em;
+  margin:0;
+}
+tr.profile_single_request, tr.profile_friends_suggestion_single{
+  border-bottom:1px solid #e2e2e2;
 }
 
 .profile_friend.media:hover,.profile_single_request:hover,.profile_friends_suggestion_single:hover{
@@ -69,28 +74,32 @@ p.profile_friend_username{
   font-size:12px;
 }
 .profile_request_accept, .profile_request_key_button,.profile_large_item_try_it_button{
-  width:70px;
+  width:80px;
   height:23px;
-  font-size:15px;
+  font-size:14px;
+  font-weight:300;
   background-color:#39b54a;
   color:#ffffff;
-  box-shadow: 0px 2px 0px 0px #179340;
+  // box-shadow: 0px 2px 0px 0px #179340;
   border:none;
 
 }
-.profile_request_key_button{
+.profile_home_img_wrap .profile_request_key_button{
   width:108px;
+}
+.profile_friends_suggestion_single .profile_request_key_button, .profile_request_buttons .profile_key_requested{
+  width:158px;
   height:23px;
 }
 .profile_request_deny{
-  width:70px;
+  width:80px;
   height:23px;
 }
 .profile_request_deny,.profile_key_requested, .profile_large_item_tried_it{
-  font-size:15px;
+  font-size:14px;
   background-color:#e2e2e2;
   color:#464646;
-  box-shadow: 0px 2px 0px 0px #c1c1c1;
+  // box-shadow: 0px 2px 0px 0px #c1c1c1;
   border:none;
 }
 .profile_request_buttons{
@@ -141,7 +150,7 @@ p.profile_friend_username{
   width:130px;
 }
 .profile_friends_suggestion_single .media{
-  padding: 0 1em;
+  padding: 6px 1em;
 }
 /*END Ask For Key Overlay*/
 
