--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -86,7 +86,7 @@
 
           <% else %>
               <li><%= link_to "Login", signin_path %></li>
-              <li><%= link_to "Sign Up", signup_path %></li>
+              <li><%= link_to "Sign Up", xroom_rooms_path %></li>
 
           <% end %>
           <!-- End If -->
