Delete PhotosLargeView since ActivityLargeView is used for photos. Some transition styles applied to make it a little faster and actually collapse Large View.

--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -29,7 +29,7 @@
 }
 #profile_drawer{
   width:760px; /*profile container width - drawer_handle width*/
-  transition:all 1s ease-in-out;
+  // transition:all 1s ease-in-out;
 }
 nav.profile {
      position:fixed;
