--- a/app/assets/stylesheets/room_profile.css.scss
+++ b/app/assets/stylesheets/room_profile.css.scss
@@ -378,7 +378,7 @@ table.generalGrid{
   text-align:center;
 
 }
-.user-photos-view #gridItemList,.profile_objects_view #gridItemList,.profile_bookmarks_view #gridItemList{
+.profile_objects_view #gridItemList,.profile_bookmarks_view #gridItemList{
   text-align:left;
 }
 #profileHome_activity_header, .profileTableHeader{
@@ -415,7 +415,9 @@ table.generalGrid{
 }
 /*center the picture*/
 .user-photos-view div.gridItem{
-  padding:0 10px;
+  padding:0;
+  margin:0;
+
 }
 
 .gridItemDescription{
