fix static content

--- a/app/views/rooms/xroom.html.erb
+++ b/app/views/rooms/xroom.html.erb
@@ -3,7 +3,7 @@
         <div class="navbar-inner" >
 
 
-            <% if @static_content_logo.image_name.blank?  %>
+            <% if @static_content_logo.nil? or @static_content_logo.image_name.blank?   %>
             <% else %>
                 <%= link_to cl_image_tag(@static_content_logo.image_name, :width => 112, :height => 32 ), root_path , class:"brand",id:  "xroom_logo"  %>
             <% end %>
@@ -23,11 +23,11 @@
                 <% end %>
             </div>
 
-            <div id="xroom_entire_room_left" style="background-image: url('<%= @static_content_arrows.image_name%>')" >
+            <div id="xroom_entire_room_left" style="background-image: url('<%= @arrows_image %>')" >
               <%= link_to "", xroom_rooms_path(bundle_id:@bundle.id,moving_toward:'prev'), :method => :get, class:'xroom_entire_room_right_fill-div' %>
             </div>
 
-            <div id="xroom_entire_room_right" style="background-image: url('<%= @static_content_arrows.image_name%>')" >
+            <div id="xroom_entire_room_right" style="background-image: url('<%= @arrows_image %>')" >
               <%= link_to "", xroom_rooms_path(bundle_id:@bundle.id,moving_toward:'next'), :method => :get, class:'xroom_entire_room_right_fill-div' %>
             </div>
 
