--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,21 +2,22 @@
   <div class="navbar-inner" >
     <div class="container">
 
-      <% @static_content = StaticContent.find_by_name("mywebroom-logo") %>
+      <% @static_content = StaticContent.find_by_name("mywebroom-logo")  %>
       <% if signed_in? %>
-          <% if @static_content.image_name.blank?  %>
-          <% else %>
-              <%= link_to cl_image_tag(@static_content.image_name, :width => 112, :height => 32 ),  room_rooms_path(current_user.username), class: "brand"  %>
-          <% end %>
+
+
+                      <% if @static_content.nil? or @static_content.image_name.blank?  %>
+
+                      <% else %>
+                          <%= link_to cl_image_tag(@static_content.image_name, :width => 112, :height => 32 ),  room_rooms_path(current_user.username), class: "brand"  %>
+                      <% end %>
+
       <%else%>
-          <% if @static_content.image_name.blank?  %>
-          <% else %>
-            <%= link_to cl_image_tag(@static_content.image_name, :width => 112, :height => 32 ), root_path , class: "brand"  %>
-          <% end %>
+                  <% if @static_content.nil? or @static_content.image_name.blank?  %>
 
-
-
-
+                  <% else %>
+                        <%= link_to cl_image_tag(@static_content.image_name, :width => 112, :height => 32 ), root_path , class: "brand"  %>
+                  <% end %>
       <%end%>
 
       <!--<nav>-->
