--- a/app/views/rooms/room.html.erb
+++ b/app/views/rooms/room.html.erb
@@ -10,6 +10,7 @@
   <div id="xroom_bookmarks_browse_mode">    </div>
   <div id="xroom_footer">   </div>
   <div id="xroom_scroll_right">   </div>
+  <div id="xroom_tutorial_container">   </div>
 
   <div id="xroom">
     <div id="xroom_items_0">    </div>
