--- a/app/assets/stylesheets/rooms_tutorial.css.scss
+++ b/app/assets/stylesheets/rooms_tutorial.css.scss
@@ -85,6 +85,11 @@
 
 }
 
+#tutorial_click_item_img{
+  padding-top: 10px;
+
+}
+
 ////
 // turorial Open Store
 ////
@@ -406,20 +411,14 @@
 
   font-size: 32px;
   padding: 40px;
-  //margin: 20px 100px;
-
 
 }
 #tutorial_show_me_my_room_btn{
   font-size: 18px;
-  //margin: 20px;
   padding: 10px 100px;
 
 }
 
-#tutorial_show_me_my_room_btn_container{
-  //margin: 60px;
-}
 
 
 
