--- a/app/assets/stylesheets/lightbox.css
+++ b/app/assets/stylesheets/lightbox.css
@@ -3,6 +3,7 @@
     top: 0;
     left: 50%;
     width: 500px;
+    height: 320px;
     margin-left: -250px;
     background: #fff;
     z-index: 1501;
