Show Profile Requests when accepting reuqest from friend by clicking 'Accept' button in your email. This feature also required writing in a parameter and logic for came_from in params check in RoomView

--- a/app/views/users_mailer/friend_request_email.html.erb
+++ b/app/views/users_mailer/friend_request_email.html.erb
@@ -29,7 +29,7 @@
         padding: 10px;">
 
   <%= link_to "Accept the Request ",
-              room_rooms_url(@user.username,came_from:@came_from_email_request_key),
+              room_rooms_url(@user_requested.username,came_from:@came_from_email_request_key),
               :style => 'display: block;
                         height: 100%;
                         width: 100%;
