Remove box shadow from large view social

--- a/app/assets/stylesheets/room_profile_large_item.css.scss
+++ b/app/assets/stylesheets/room_profile_large_item.css.scss
@@ -51,6 +51,11 @@
 }
 .activity_item_large_view .social_bar{
   background-color: transparent;
+
+  .navbar-inner{
+    box-shadow:none;
+  }
+
 }
 .activity_item_large_list.profile_button{
   vertical-align:top;
